trying to fix the comment not displaying issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -274,6 +274,9 @@ h3 {
   width: 50%;
   margin: auto;
 }
+.recipe-like-comment{
+  text-align: center;
+}
 .recipe-container img{
   align-items: center;
 }
