--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,47 +2,44 @@
 {% load static %}
 
 {% block content %}
-<div class="blog-container col-11">
-    <div class="card-body">
-        <div class="row">
-            {% for post in post_list %}
-            <img class="card-img" src="{{ post.featured_image.url }}">
-            <div class="card-body text-center">
-                <h3 class="card-title">
-                   <a href="{% url 'recipe' post.slug %}">{{ post.title }}  </a> 
-                </h3>
-                <div class="card-body">
-                    <p class="card-text font-weight-bold"> {{ post.excerpt }}</p>
-                </div>
-                <p class="card-text text-muted h6">{{ post.created_on }}
-                
-                <i class="far fa-heart likes pb-3"></i>
-                {{ post.number_of_likes }}
-                <i class="fas fa-comments comment"></i>
-                {{ comment.comment_count }}
-            </div>
+<!-- List of the post add by users -->
+<div class="container col-11">
+    <div class="row">
+        <div class="col text-center mt-5 mb-3 pt-3">
+            <h2><span>Recipes</span></h2>
         </div>
     </div>
 </div>
-    {% if forloop.counter|divisibleby:3 %}
-    </div>
+<!-- Recipe cards -->
+<div clas="card-body">
     <div class="row">
-        {% endif %}
+        {% for post in post_list %} 
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+            <div class="card md-3 recipe-card">
+                   <a href="{% url 'recipe' post.slug %}" class="text-decoration-none fw-bold">
+                <div class="card-body text-center ">
+                    <h3 class="card-title">
+                        {{ post.title }}  
+                    </h3>
+                    <img class="card-img" src="{{ post.featured_image.url }}">
+                    <div class="card-body">
+                        <p class="card-text font-weight-bold"> {{ post.excerpt }}</p>
+                    </div>
+                    
+                        <i class="far fa-heart likes pb-3"></i>
+                        {{ post.number_of_likes }}
+                        <br>
+                        <i class="fas fa-comments comment"></i>
+                        {{ comment.comment_count }}
+                    <div class="card-footer mt-3 border-0">
+                        <p class="card-text text-muted h6">{{ post.created_on }}  
+                     </div>    
+                
+                </div>
+            </a>
+            </div>
+        </div>
         {% endfor %}
-
-
-<!-- Paginated posts-->
-{% if is_paginated %}
-<nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-        {% if page_obj.has_pervious %}
-        <li><a href ="?page=={{ page_obj.pervious_page_number }}" class="page-link">&laquo; PREV</a></li>
-        {% endif %}
-        {% if page_obj.has_next %}
-        <li><a href ="?page=={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a></li>
-        {% endif %}
-    </ul>
-</nav>
-{% endif %}
+    </div>
 </div>
 {% endblock content %}
