trying to add code to allow users to add post

--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -6,13 +6,13 @@
 <div class="container col-lg-8 col-md-10">
     <h2>Share your <span>Recipe..</span></h2>
     {% if user.is_authenticated %}
-    <form method="POST" class="addpost" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
     </form>
     {% else %}
     <p>You need to sign in to share a recipe 
-        <span href="{% url 'account_login' %}">Sign In</span>
+        <a href="{% url 'account_login' %}"><span>Sign In</span></a>
     </p> 
     {% endif %}
 </div>
