trying to save data enetrr inadd post form in to database

--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -9,6 +9,7 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
+        <input type="submit">
     </form>
     {% else %}
     <p>You need to sign in to share a recipe 
