tryng to code on how to save data from html to database

--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -9,7 +9,7 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type="submit">
+        <button type="submit" class="btn btn-primary">Post</button>
     </form>
     {% else %}
     <p>You need to sign in to share a recipe 
