--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -6,7 +6,7 @@
 <div class="container col-lg-8 col-md-10">
     <h2>Share your <span>Recipe..</span></h2>
     {% if user.is_authenticated %}
-    <form method="POST" enctype="multipart/form-data" action="">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary">Post</button>
