--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,6 @@ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
 span{
   font-family: 'Dancing Script', sans-serif;
@@ -245,17 +244,24 @@ main{
 }
 /* ------------------ Blog Page ------------------------ */
 .card-img {
-  padding: 5px;
-  width: 30%;
-  height: 30%;
+  padding: 5px; 
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.card-title a{
+/*.card-title a{
   text-decoration: none;
   color: #1abc9c;
-}
+}*/
 h3 {
   text-decoration: none;
   color: #1abc9c;
+}
+.card-body p{
+  color: #aa3e98ff;
+}
+.card-body i {
+  color: #9368b7ff;
 }
 
 /* ------------------   Recipe Page -------------------- */
@@ -282,6 +288,12 @@ h3 {
 }
 .recipe-container img{
   align-items: center;
+}
+.recipe-img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 /* ------------------ Register Page -------------------- */
 .signup-container {
