trying to add summer note on fomr page in htlm

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -12,7 +12,7 @@
 </div>
 
 <div>
-    <button>
+    <button class="addpost-button">
         <a href="{% url 'addpost' %}"> Add Recipe</a>
     </button>
 </div>
