--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -8,7 +8,7 @@
     {% if user.is_authenticated %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form|crispy }}
+        {% crispy form %}
         <button type="submit" class="btn btn-primary">Post</button>
     </form>
     {% else %}
