--- a/templates/editpost.html
+++ b/templates/editpost.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
-
+    {% if user.is_authenticated %}
+        {% if user.id == post.onwer.id %}
+            <div class="container col-lg-8 col-md-10">
+                <h2>Share your <span>Recipe..</span></h2>
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button type="submit" class="btn btn-primary">Post</button>
+                </form>
+            </div>
+        {% else %}
+            <h3>You can't edit this recipe, as your not the owner</h3>
+        {% endif %}
+    {% else %}
+        <h3>You need to log in </h3>
+        <a href="{% url 'account_login' %}"><span>Sign In</span></a>
+    {% endif %}
+    
 {% endblock content %}
