added edit and delete button to recipe page and test if it wokr once user is loged in

--- a/templates/deletepost.html
+++ b/templates/deletepost.html
@@ -2,5 +2,5 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-
+    <h2> Are you sure you would like to delet this recipe</h2>
 {% endblock content %}
