--- a/templates/blog.html
+++ b/templates/blog.html
@@ -12,6 +12,13 @@
     <button class="addpost-button">
         <a href="{% url 'addpost' %}"> Add Recipe</a>
     </button>
+    <button class="addpost-button">
+        <a href="{% url 'editpost' %}"> edit </a>
+    </button>
+    <button class="addpost-button">
+        <a href="{% url 'deletepost' %}"> deleted</a>
+    </button>
+
 </div>
     </div>
 </div>
