--- a/templates/deletepost.html
+++ b/templates/deletepost.html
@@ -2,5 +2,25 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <h2> Are you sure you would like to delet this recipe</h2>
+<div class="delete-container">
+    <h2>Deleting Recipe..!!</h2>
+    {%  if user.is_authenticated %}
+        <h3>Recipe... {{ post.title }} </h3>
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <h4> Are you sure you would like to delete this recipe?</h4>
+            <br>
+            <button >
+                <a href="{% url 'blog' %}"> Cancel </a>
+            </button>
+            <button>
+                Delete!
+            </button>
+        </form>
+    {% else %}
+        <h4> You cannot delete this recipe, only the writer of this post can delete the recipe.</h4>
+    {% endif %}
+
+</div>
+
 {% endblock content %}
