--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -12,7 +12,7 @@
         <button type="submit" class="btn btn-primary">Post</button>
     </form>
     {% else %}
-    <p>You need to sign in to share a recipe 
+    <p>You need to sign in to share your recipe 
         <a href="{% url 'account_login' %}"><span>Sign In</span></a>
     </p> 
     {% endif %}
