--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -8,7 +8,8 @@
     {% if user.is_authenticated %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {% crispy form %}
+        {{ form | crispy }}
+        {{ form.media }}
         <button type="submit" class="btn btn-primary">Post</button>
     </form>
     {% else %}
@@ -17,4 +18,5 @@
     </p> 
     {% endif %}
 </div>
+
 {% endblock content %}
