--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,6 @@ main{
   padding-top: 100px;
 }
 
-
 /*-------- NavBar & Logo----------*/
 
 .home-link a {
@@ -203,7 +202,7 @@ main{
 .hero-text-2{
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 70%;
   transform: translate(-50%, -50%);
   font-family: 'Dancing Script', sans-serif;
@@ -217,6 +216,10 @@ main{
   color: #aa3e98ff;
   font-size: 90px;
 }
+.hero-text-1 h2{
+  font-family: 'Indie Flower', sans-serif;
+  font-size: 60px;
+}
 .hero-text-2 h1:hover{
   color: #ad0942;
 }
@@ -226,10 +229,6 @@ main{
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-.hero-text-1 h2{
-  font-family: 'Indie Flower', sans-serif;
-  font-size: 60px;
 }
 .hero-text{
   font-size: 25px;
@@ -242,17 +241,25 @@ main{
   border-radius: 10px;
   padding: 25px;
 }
+@media screen and (min-width: 320px){
+  .hero-text-2 .hero-text-1 {
+    font-size: 20px
+  }
+  .hero-text{
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 5%;
+  }
+}
 /* ------------------ Blog Page ------------------------ */
 .card-img {
-  padding: 5px; 
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+
 /*.card-title a{
   text-decoration: none;
   color: #1abc9c;
 }*/
+}
 h3 {
   text-decoration: none;
   color: #1abc9c;
